--- a/burger-queen/src/App.css
+++ b/burger-queen/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Blinker', sans-serif;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav{
+  width: auto;
+  height: auto;
+  background-color: #FF592C;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logoHome{
+  height: auto;
+  width: 180px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: auto;
+  padding: 2em 0;
+}
+
+main{
+  background-color: #F4E6E6;
+  display:flex;
+  justify-content: space-evenly;
+  min-height: 80vh;
+}
+
+main div{
+  width:50%;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+}
+main div > div{
+  width: 300px;
+  display: flex;
+  justify-content: flex-start !important;
+  align-items: flex-start;
+  flex-direction: column;
+  
+}
+
+h1{
+  width: 248px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 58px;
+  color: #594A47;
+}
+
+.btn-home{
+  padding:1.5em 6em; 
+  background: #504E8F;
+  border-radius: 5px;
+  border: 0;
   color: white;
+  margin-top: 2em;
+  margin-bottom: 1.5em;
+  transition: .5s;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-home:hover, .btn-home1:hover{
+  cursor: pointer;
+  background: #3c3a78;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-home1{
+  padding:1.5em 6em; 
+  background: #504E8F;
+  border-radius: 5px;
+  border: 0;
+  color: white;
+  transition: .5s;
+  text-decoration: none;
+}
+
+.cartasHome{
+  padding: 10px;
+  margin: 10px; 
+  width: 70%;
+}
+
+footer{
+  background-color: #353535;
+  color: white;
+  display: flex;
+  width:100%;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
