--- a/burger-queen/src/App.css
+++ b/burger-queen/src/App.css
@@ -93,3 +93,50 @@ footer{
   align-items: center;
   padding: 20px;
 }
+
+/* Menu */
+
+.btn-enviar{
+  padding:1em 3em; 
+  background: #FF592C;
+  border-radius: 5px;
+  border: 0;
+  color: white;
+  margin-top: 2em;
+  margin-bottom: 1.5em;
+  transition: .5s;
+  text-decoration: none; 
+}
+
+.btn-enviar:hover{
+  cursor: pointer;
+  background: #db441a;
+}
+
+.img-sandwich, .img-waffles, .img-postres, .img-cafes{
+  width:200px;
+  height:200px;
+  background-size:contain !important;
+}
+
+.card{
+  display: block;
+  width: 0 5em;
+  height: 4em;
+  background-color: #D9D9D9;
+  padding: 10%;
+}
+
+.card .img-postres{
+  background-size: contain;
+}
+
+.btn-agregar{
+  padding:0.5em 1em; 
+  background-color: #504E8F;
+  border-radius: 5px;
+  border: 0;
+  color: white;
+  transition: .5s;
+  text-decoration: none;
+}
