--- a/burger-queen/src/App.css
+++ b/burger-queen/src/App.css
@@ -96,54 +96,63 @@ footer{
 
 /* Menu */
 
-.btn-enviar{
-  padding:1em 3em; 
-  width: 10%;
-  background: #FF592C;
-  border-radius: 5px;
-  border: 0;
-  color: white;
-  margin-top: 2em;
-  margin-bottom: 1.5em;
-  transition: .5s;
-  text-decoration: none; 
+.container-menu{
+  display:flex;
+  flex-flow:row wrap;
 }
 
-.btn{
+.column{
+  width:50%;
+  padding:20px;
+}
+
+.card {
+  display:flex;
+  flex-flow: row wrap;
+  gap:30px;
+  margin-bottom:30px;
+  margin-top:30px;
+}
+
+.carrito{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  filter: invert(1);
+  justify-content: flex-end;
+  margin-right: 3em;
 }
 
-.btn-enviar:hover{
-  cursor: pointer;
-  background: #db441a;
+.carrito img{
+  width: auto;
+  height: 24px;
+  margin: auto;
 }
 
-.img-sandwich, .img-waffles, .img-postres, .img-cafes{
-  width:200px;
-  height:200px;
-  background-size:contain !important;
-}
-
-.card{
-  width: 50%;
-  padding: 20%;
-  margin-top: 30px;
+.alignNav{
   display: flex;
-  flex-direction: row;
-  padding:  20px
 }
 
-.card2{
-    width: 50%;
-    padding: 20%;
-    display: flex;
-    padding:  20px
+.img-menu{
+  width:30%;
+  min-height:200px;
+  background-size:cover !important;
 }
 
-.card .img-postres{
-  background-size: contain;
+.list{
+  background-color:#D9D9D9;
+  width:65%;
+  padding:30px;
+  border-radius:5px;
+  position:relative;
+}
+.list ul{
+  list-style-type: none;
+}
+.list ul li{
+  margin-bottom:1.2em;
+}
+.list ul li:nth-child(3){
+  font-weight:700;
+  font-size:1.2em;
 }
 
 .btn-agregar{
@@ -154,27 +163,31 @@ footer{
   color: white;
   transition: .5s;
   text-decoration: none;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
 }
 
-.list2{
-  padding: 5%;
-  width: 50%;
-  background-color: #D9D9D9;
-}
-
-.list{
-  padding: 5%;
-  width: 50%;
-  background-color: #D9D9D9;
+.btn-agregar:hover{
+  cursor: pointer;
+  background:  #3c3a78;
 }
 
 /* Preparacion */
 
 .wait{
   background-size: contain;
-  width: 50%
 }
 .waiting{
-
+  background-color: red;
   width: 50%;
+}
+
+.tittle-prep{
+  font-size: 48px;
+}
+
+.prep{
+  background-color: #F4E6E6;
+  ;
 }
